# UnifiedLeaEcosystem

./: .dockerignore  .env.example  .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  Dockerfile  IMPORTS.md  README.md  clean-and-setup.sh  docker-compose.yml  install.sh  package-lock.json  package.json  reset-logs-and-formalizations.sh  reset-to-clean.sh  start-dev.sh  start-lea.command  unify-monorepo-cleanup.sh  vite.config.ts
apps/lea-standalone/adapter/: alembic.ini  pyproject.toml
apps/lea-standalone/adapter/_deferred/: README.md  project_assignment.py  project_usage.py  test_project_usage.py
apps/lea-standalone/adapter/app/: artifacts.py  backup.py  blueprint.py  blueprint_seed.py  bridge.py  collation.py  config.py  db.py  filesystem.py  ghimport.py  gitstore.py  graph.py  lsp_proxy.py  main.py  migrations.py  models_catalog.py  projects.py  registry_backfill.py  runbroker.py  runregistry.py  settings.py  skills_catalog.py  store.py  subagent_overrides.py  uploads.py
apps/lea-standalone/adapter/app/routes/: __init__.py  projects.py  runs.py  search.py  sessions.py  settings.py  skills.py  subagents.py
apps/lea-standalone/adapter/migrations/: env.py
apps/lea-standalone/adapter/migrations/versions/: 0001_baseline.py  0002_reconcile_legacy_drift.py  0003_timeline_and_blobs.py  0004_backfill_timeline.py  0005_session_parent.py  0006_artifact_index.py  0006_timeline_compaction_kind.py  0007_merge_artifact_and_compaction.py
apps/lea-standalone/adapter/tests/: test_artifacts.py  test_backfill.py  test_backup.py  test_blueprint.py  test_bridge.py  test_collation.py  test_concurrent_runs_e2e.py  test_config.py  test_db_code_steps.py  test_db_messages.py  test_db_seq.py  test_db_seq_concurrent.py  test_db_sessions.py  test_db_skills.py  test_filesystem.py  test_ghimport.py  test_gitstore.py  test_graph.py  test_lsp_proxy.py  test_migrations.py  test_mirror_upsert.py  test_origin.py  test_projects.py  test_routes_projects.py  test_routes_runs.py  test_routes_runs_concurrency.py  test_routes_sessions.py  test_routes_skills.py  test_routes_subagents.py  test_runbroker.py  test_runregistry.py  test_search.py  test_session_tree.py  test_settings.py  test_skills_catalog.py  test_store.py  test_subagent_bridge.py  test_timeline_schema.py  test_uploads.py
apps/lea-standalone/prover/: .gitignore  DESIGN.md  README.md  USAGE.md  lea-api-design.md  pyproject.toml
apps/lea-standalone/prover/examples/: test_proof.lean
apps/lea-standalone/prover/lea/: __init__.py  agent.py  condenser.py  config.py  events.py  interface.py  lsp_daemon.py  mcp.py  profiles.py  project.py  prompt.py  registry.py  runctx.py  safeverify.py  subagents.py  tools.py
apps/lea-standalone/prover/lea/agents/: premise-search.yaml  proof-candidate.yaml
apps/lea-standalone/prover/tests/agent/: test_gate.py  test_project.py  test_run_events.py
apps/lea-standalone/prover/workspace/: lea.md
companion/: config.mjs  (+4 more)
server/: pyproject.toml  run_api.py
server/app/: config.py  db.py  lea_api_client.py  main.py  project_assignment.py  project_unassignment.py  runner.py  settings.py  store.py
server/tests/: test_api_smoke.py  test_config 2.py  test_config.py  test_lea_api_client.py  test_runner 2.py  test_runner.py  test_settings.py  test_store.py
(+324 files in other folders)
