[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["lea"]

[project]
name = "lea-prover"
version = "0.1.0"
description = "A minimal Lean 4 theorem proving agent"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.96.0",
    "google-genai>=1.70.0",
    "openai>=2.32.0",
    "litellm>=1.75.5",
    "mcp>=1.0",
    "pyyaml>=6.0",  # declarative agent profiles (item 19); used directly by lea/profiles.py
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
